* Reworked gamepad handling using the SDL_GameController API.
* Several new key bindings, many of which will benefit gamepad users.
* Added an "action picker" for interacting with items/powers when using a gamepad or a touchscreen.
* Added misc.selection_rect_corner_size to engine/widget_settings.txt. This allows for a nicer "targeting reticle" appearance when selecting widgets without a mouse.

Engine fixes:

* Fix enemies not being able to target NPC followers
* Fix loot and sound effects being cleared in StatBlock files with multiple sections
* Fix potential crash when removing summons that would be out-of-bounds on the next map.
* Fix bug where a damage type with no name could be removed if another damage type was defined after it.
* Don't show hidden stats under 'Related Stats' section of tooltips of Character menu.
* Fix bug where negative regen wouldn't work if the resource was 100% full.
* Fix bug where negative regen would overflow after reaching zero.
* Fix bug that caused built-in effect types to be ignored by Power post_effect.
* Fix disappearing sprites due to render priority overflow.
* Fading of corpses is now correctly disabled when corpse_timeout=0 is used in engine/misc.txt.
* Fix cast animation not playing when using an inventory item that is not instant.
* Fixed a bug on Android where loading the default settings would exit fullscreen mode.
* Fixed crash in NPC dialog when using gamepad.
* Fixed several small bugs with navigating UI elements with a gamepad.
* Fixed incorrect handling of gamepad stick/trigger deadzone.
* Fixed fullscreen setting being turned off when loading configuration defaults on Android.
* Fixed input hint for item tooltips when using a touchscreen.
* Improved file access handling on Android versions 10 and up. This fixes the infinite cutscene loop when starting a new game.

Game updates:
