@@ -1195,8 +1195,6 @@ body {
 
 <p><strong>close</strong> | <code>point</code> | Position of the close button.</p>
 
-<p><strong>background</strong> | <code>filename</code> | Filename for the background image.</p>
-
 <p><strong>image.image_pos</strong> | <code>point</code> | Position of the image.</p>
 
 <p><strong>image.image</strong> | <code>filename</code> | Filename of the image.</p>
@@ -1325,6 +1323,8 @@ body {
 
 <p><strong>soundfx_close</strong> | <code>filename</code> | Filename of a sound to play when closing this menu.</p>
 
+<p><strong>background</strong> | <code>filename</code> | Filename of the background image for this menu.</p>
+
 <hr />
 
 <h4>MenuDevConsole</h4>
@@ -1430,8 +1430,6 @@ body {
 <p><strong>map_pos</strong> | <code>rectangle</code> | Position and dimensions of the map.</p>
 
 <p><strong>text_pos</strong> | <code>label</code> | Position of the text label with the map name.</p>
-
-<p><strong>background</strong> | <code>filename</code> | Optional background image.</p>
 
 <p><strong>color_wall</strong> | <code>color, int : Color, Alpha</code> | Color used for walls.</p>
 
