@@ -11,6 +11,7 @@ Engine features:
 * Several new key bindings, many of which will benefit gamepad users.
 * Added an "action picker" for interacting with items/powers when using a gamepad or a touchscreen.
 * Added misc.selection_rect_corner_size to engine/widget_settings.txt. This allows for a nicer "targeting reticle" appearance when selecting widgets without a mouse.
+* Added 'background' property for all menus. Menus will fall back to the existing hard-coded filenames if this property is omitted.
 
 Engine fixes:
 
